--- a/dedicated destinations/Taj_Mahal/Taj.html
+++ b/dedicated destinations/Taj_Mahal/Taj.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="gallery/jovyn-chamb-iWMfiInivp4-unsplash.jpg" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="gallery/jovyn-chamb-iWMfiInivp4-unsplash.jpg" alt="trip" height="250" width="45" alt=""
+                    class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -65,8 +67,12 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> Meal included</h3>
-                <p>The Taj Mahal, while not directly linked to specific meals, is located in Agra, a city renowned for its rich culinary heritage. Visitors can indulge in Mughlai cuisine, characterized by rich, aromatic dishes like Murg Musallam (a spiced
-                    whole chicken) and Navratan Korma (a creamy mixed vegetable curry). Agra is also famous for its breakfast combo of Bedai (fried bread with spicy lentil filling) and Jalebi (a syrup-soaked sweet). Don't miss trying Petha, a unique sweet
+                <p>The Taj Mahal, while not directly linked to specific meals, is located in Agra, a city renowned for
+                    its rich culinary heritage. Visitors can indulge in Mughlai cuisine, characterized by rich, aromatic
+                    dishes like Murg Musallam (a spiced
+                    whole chicken) and Navratan Korma (a creamy mixed vegetable curry). Agra is also famous for its
+                    breakfast combo of Bedai (fried bread with spicy lentil filling) and Jalebi (a syrup-soaked sweet).
+                    Don't miss trying Petha, a unique sweet
                     made from ash gourd, and savoring tandoori dishes cooked in traditional clay ovens.</p>
             </div>
 
@@ -92,18 +98,29 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3549.5214276254324!2d78.03766837523386!3d27.17134387649396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747123b369df2b%3A0x5b725845799ad853!2sTaj%20Mahal%20Agra%20Tour%20Guide%20(Govt.%20approved)%20English%20%26%20German%20family!5e0!3m2!1sen!2sin!4v1717396071081!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3549.5214276254324!2d78.03766837523386!3d27.17134387649396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39747123b369df2b%3A0x5b725845799ad853!2sTaj%20Mahal%20Agra%20Tour%20Guide%20(Govt.%20approved)%20English%20%26%20German%20family!5e0!3m2!1sen!2sin!4v1717396071081!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
                 <p>
-                    The <strong> Taj Mahal </strong>was commissioned by Shah Jahan in 1631, to be built in the memory of his wife Mumtaz Mahal, who died on 17 June that year while giving birth to their 14th child, Gauhara Begum. Construction started in
-                    1632, and the mausoleum was completed in 1648, while the surrounding buildings and garden were finished five years later. <br>
-                    <br> The imperial court documenting Shah Jahan's grief after the death of Mumtaz Mahal illustrates that the love story held as the inspiration for the Taj Mahal. According to contemporary historians Muhammad Amin Qazvini, Abdul Hamid
-                    Lahori and Muhammad Saleh Kamboh, Shah Jahan did not show the same level of affection for others as he had shown Mumtaz while she was alive. After her death, he avoided royal affairs for a week due to his grief and gave up listening
-                    to music and lavish dressing for two years. Shah Jahan was enamored by the beauty of the land at the south side of Agra on which a mansion belonging to Raja Jai Singh I stood. He chose the place for the construction of Mumtaz's tomb
+                    The <strong> Taj Mahal </strong>was commissioned by Shah Jahan in 1631, to be built in the memory of
+                    his wife Mumtaz Mahal, who died on 17 June that year while giving birth to their 14th child, Gauhara
+                    Begum. Construction started in
+                    1632, and the mausoleum was completed in 1648, while the surrounding buildings and garden were
+                    finished five years later. <br>
+                    <br> The imperial court documenting Shah Jahan's grief after the death of Mumtaz Mahal illustrates
+                    that the love story held as the inspiration for the Taj Mahal. According to contemporary historians
+                    Muhammad Amin Qazvini, Abdul Hamid
+                    Lahori and Muhammad Saleh Kamboh, Shah Jahan did not show the same level of affection for others as
+                    he had shown Mumtaz while she was alive. After her death, he avoided royal affairs for a week due to
+                    his grief and gave up listening
+                    to music and lavish dressing for two years. Shah Jahan was enamored by the beauty of the land at the
+                    south side of Agra on which a mansion belonging to Raja Jai Singh I stood. He chose the place for
+                    the construction of Mumtaz's tomb
                     after which Jai Singh agreed to donate it to the emperor.
 
 
@@ -145,7 +162,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -168,11 +188,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
