--- a/dedicated destinations/spiti/spiti.html
+++ b/dedicated destinations/spiti/spiti.html
@@ -41,7 +41,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -55,7 +56,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Spiti_River_Kaza_Himachal_Jun18_D72_7232.jpg/1200px-Spiti_River_Kaza_Himachal_Jun18_D72_7232.jpg" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Spiti_River_Kaza_Himachal_Jun18_D72_7232.jpg/1200px-Spiti_River_Kaza_Himachal_Jun18_D72_7232.jpg"
+                    alt="trip" height="250" width="45" alt="" class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -66,16 +68,18 @@
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> About their Food </h3>
                 <p>
-                    Spiti Valley is a cold desert valley with beautiful monasteries and breathtaking scenery. Apart from the enthralling views, tourists are lured in by the delicious traditional food. Here's a list of food items that you must try in Spiti :
-                    <ul>
+                    Spiti Valley is a cold desert valley with beautiful monasteries and breathtaking scenery. Apart from
+                    the enthralling views, tourists are lured in by the delicious traditional food. Here's a list of
+                    food items that you must try in Spiti :
+                <ul>
 
-                        <li> Madra </li>
-                        <li> Dhaam </li>
-                        <li> Siddu </li>
-                        <li> Trout curry </li>
-                        <li> Thukpa </li>
-                        <li> Momos </li>
-                    </ul>
+                    <li> Madra </li>
+                    <li> Dhaam </li>
+                    <li> Siddu </li>
+                    <li> Trout curry </li>
+                    <li> Thukpa </li>
+                    <li> Momos </li>
+                </ul>
 
 
 
@@ -107,16 +111,25 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13497.775707026356!2d78.02461625483473!3d32.246136082236355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3906a40ef42dc09b%3A0x52b583a91132a239!2sSpiti%20Valley%2C%20Marango%20Rangarik%2C%20Himachal%20Pradesh%20172114!5e0!3m2!1sen!2sin!4v1717866261639!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13497.775707026356!2d78.02461625483473!3d32.246136082236355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3906a40ef42dc09b%3A0x52b583a91132a239!2sSpiti%20Valley%2C%20Marango%20Rangarik%2C%20Himachal%20Pradesh%20172114!5e0!3m2!1sen!2sin!4v1717866261639!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
-                <p>Spiti is a high-altitude region of the Himalayas, located in the north-eastern part of the northern Indian state of Himachal Pradesh. The name "Spiti" means "The middle land", i.e. the land between Tibet and India. <br> <br> The name "Spiti"
-                    is derived from "Piti", which means "the middle land" as the valley is surrounded on all sides by mountain ranges that separate it from former empires. These include Ladakh to the north, Tibet to the east, Bushahr to the south and
-                    Kullu to the west. <br> Some believe that the name Piti is a contraction of Ashwapati, a legendary ruler of Pin Valley in the time of the Mahabharata. Ashwapati means "lord of horses" and Pin Valley was famous for its horse breeds.
-                    Others attribute the name to a Tibetan dacoit named Spiti Thakur. Based in Spiti valley, the Thakur gangs raided the upper parts of Kullu, before the Sen kings established their rule.
+                <p>Spiti is a high-altitude region of the Himalayas, located in the north-eastern part of the northern
+                    Indian state of Himachal Pradesh. The name "Spiti" means "The middle land", i.e. the land between
+                    Tibet and India. <br> <br> The name "Spiti"
+                    is derived from "Piti", which means "the middle land" as the valley is surrounded on all sides by
+                    mountain ranges that separate it from former empires. These include Ladakh to the north, Tibet to
+                    the east, Bushahr to the south and
+                    Kullu to the west. <br> Some believe that the name Piti is a contraction of Ashwapati, a legendary
+                    ruler of Pin Valley in the time of the Mahabharata. Ashwapati means "lord of horses" and Pin Valley
+                    was famous for its horse breeds.
+                    Others attribute the name to a Tibetan dacoit named Spiti Thakur. Based in Spiti valley, the Thakur
+                    gangs raided the upper parts of Kullu, before the Sen kings established their rule.
                 </p>
             </div>
 
@@ -154,7 +167,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -177,11 +193,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
