--- a/dedicated-destinations/Paris/start.html
+++ b/dedicated-destinations/Paris/start.html
@@ -30,7 +30,8 @@
     --->
     <div class="nav-container">
         <nav class="newNav">
-            <a href="#" class="nav__logo" data-aos="fade-right" style="text-decoration: none;">Tourguide<span>.</span></a>
+            <a href="#" class="nav__logo" data-aos="fade-right"
+                style="text-decoration: none;">Tourguide<span>.</span></a>
 
             <ul class="navLinks">
                 <li class="link home" data-aos="fade-down"><a href="../../index.html#Home">Home</a></li>
@@ -43,7 +44,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -67,7 +69,8 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> BBQ meal included</h3>
-                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad, shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
+                <p>Main menu: Fresh fish, grilled chicken, pork chops, pasta with red sauce. Appetizers: Greek salad,
+                    shrimp saganaki, roasted vegetables, stuffed vine leaves. Vegetarian meal included</p>
             </div>
 
             <div class="features">
@@ -97,8 +100,10 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.96777879319!2d2.264634775972664!3d48.85882549227066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis%2C%20France!5e0!3m2!1sen!2sin!4v1706388784229!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83998.96777879319!2d2.264634775972664!3d48.85882549227066!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e1f06e2b70f%3A0x40b82c3688c9460!2sParis%2C%20France!5e0!3m2!1sen!2sin!4v1706388784229!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <!-- Menu Container -->
             <div class="w3-container" id="menu">
@@ -116,11 +121,22 @@
 
                     <div id="Eat" class="w3-container menu w3-padding-48 w3-card">
 
-                        <p class="w3-text-grey">Paris is not just the capital of France; it’s the capital of fashion and the city of love. Located by the River Seine in the north of France, Paris is reputed for being the most beautiful and romantic city in the world. <br><br>                            It is overwhelmed with culture, history, iconic architecture, arty treasures, delicious food and exciting fashion. Europe’s most enchanting city, Paris is known for its many monuments, especially the Eiffel Tower, Notre-Dame
+                        <p class="w3-text-grey">Paris is not just the capital of France; it’s the capital of fashion and
+                            the city of love. Located by the River Seine in the north of France, Paris is reputed for
+                            being the most beautiful and romantic city in the world. <br><br> It is overwhelmed with
+                            culture, history, iconic architecture, arty treasures, delicious food and exciting fashion.
+                            Europe’s most enchanting city, Paris is known for its many monuments, especially the Eiffel
+                            Tower, Notre-Dame
                             Cathedral, Arc de Triomphe, Opéra Garnier, Les Invalides, etc.
-                            <br><br>Paris was home to some of the best artists through history; hence, it harbors treasures and antiques from the masters like Picasso, Van Gogh, Monet, Dalí, and Renoir. Paris (and the whole of France) is famous for its
-                            food and drinks; from cozy little cafes to one of its many Michelin-starred restaurants – the food is prepared and presented with perfection here.<br><br> Whether you’re a first-timer or regular visitor, Paris always seems
-                            magical as there are so many places to explore. It’s no wonder that the city is one of the most popular tourist destinations in the world and welcomes over 45 million visitors every year.
+                            <br><br>Paris was home to some of the best artists through history; hence, it harbors
+                            treasures and antiques from the masters like Picasso, Van Gogh, Monet, Dalí, and Renoir.
+                            Paris (and the whole of France) is famous for its
+                            food and drinks; from cozy little cafes to one of its many Michelin-starred restaurants –
+                            the food is prepared and presented with perfection here.<br><br> Whether you’re a
+                            first-timer or regular visitor, Paris always seems
+                            magical as there are so many places to explore. It’s no wonder that the city is one of the
+                            most popular tourist destinations in the world and welcomes over 45 million visitors every
+                            year.
                         </p>
                     </div>
                     <div id="Drinks" class="w3-container menu w3-padding-48 w3-card">
@@ -209,7 +225,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -232,11 +251,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
