--- a/dedicated destinations/thailand/t.html
+++ b/dedicated destinations/thailand/t.html
@@ -40,7 +40,8 @@
             </ul>
 
             <a href="../../index.html#cnt-form" class="contact-btn">
-                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down" fdprocessedid="kglas">Contact Us</button>
+                <button class="btn aos-init aos-animate" id="btn-style" style="margin: 0;" data-aos="fade-down"
+                    fdprocessedid="kglas">Contact Us</button>
             </a>
             <div class="hamburger" data-aos="fade-down">
                 <div class="line"></div>
@@ -53,7 +54,8 @@
         <!---Image Slider----->
         <div class="slider">
             <div class="img-box">
-                <img src="https://static.toiimg.com/img/88863845/Master.jpg" alt="trip" height="250" width="45" alt="" class="slider-img">
+                <img src="https://static.toiimg.com/img/88863845/Master.jpg" alt="trip" height="250" width="45" alt=""
+                    class="slider-img">
             </div>
 
             <!-- Next and Previous Buttons
@@ -63,8 +65,11 @@
 
             <div class="features">
                 <h3><i title="BBQ meal included" class="fa fal fa-utensils"></i> Food Items</h3>
-                <p> The word for breakfast in Thai is called aahan chow, which means morning food and it covers a wide range of options from little snacks, porridge to Thai omelet (Kai Jiew) or even grilled chicken with sticky rice (khao niew).
-                    <br> <br> Thai lunch is curried chicken or stir -fried vegetables with rice, noodles or soup. Dinner is generally eaten between 7:00pm and 8:00pm.
+                <p> The word for breakfast in Thai is called aahan chow, which means morning food and it covers a wide
+                    range of options from little snacks, porridge to Thai omelet (Kai Jiew) or even grilled chicken with
+                    sticky rice (khao niew).
+                    <br> <br> Thai lunch is curried chicken or stir -fried vegetables with rice, noodles or soup. Dinner
+                    is generally eaten between 7:00pm and 8:00pm.
 
                 </p>
             </div>
@@ -91,15 +96,20 @@
             </div>
 
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15934864.01374744!2d90.81355033056589!3d12.820796643859362!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304d8df747424db1%3A0x9ed72c880757e802!2sThailand!5e0!3m2!1sen!2sin!4v1717864433794!5m2!1sen!2sin"
-                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15934864.01374744!2d90.81355033056589!3d12.820796643859362!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304d8df747424db1%3A0x9ed72c880757e802!2sThailand!5e0!3m2!1sen!2sin!4v1717864433794!5m2!1sen!2sin"
+                    width="800" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
             <div class="description">
                 <h1><u>Description</u></h1> <br>
                 <p>
-                    Thailand is a Southeast Asian country. It's known for tropical beaches, opulent royal palaces, ancient ruins and ornate temples displaying figures of Buddha. In Bangkok, the capital, an ultramodern cityscape rises next to quiet canalside communities and
-                    the iconic temples of Wat Arun, Wat Pho and the Emerald Buddha Temple (Wat Phra Kaew). Nearby beach resorts include bustling Pattaya and fashionable Hua Hin.
+                    Thailand is a Southeast Asian country. It's known for tropical beaches, opulent royal palaces,
+                    ancient ruins and ornate temples displaying figures of Buddha. In Bangkok, the capital, an
+                    ultramodern cityscape rises next to quiet canalside communities and
+                    the iconic temples of Wat Arun, Wat Pho and the Emerald Buddha Temple (Wat Phra Kaew). Nearby beach
+                    resorts include bustling Pattaya and fashionable Hua Hin.
 
 
 
@@ -140,7 +150,10 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
+                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
+                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
                                 position: relative;
@@ -163,11 +176,11 @@
             <div class="footer__col">
                 <h4>Reach Out To Us</h4>
                 <p><span>Email:</span> tour@tourguide.com</p>
-                <p><span>Phone:</span> +91 8562145852</p>
+                <p><span>Phone:</span> +254 717783146</p>
             </div>
         </div>
         <div class="footer__bar">
-            Copyright © 2023 Arpan Chowdhury. All rights reserved.
+            Copyright © 2023 DNX EMPIRE. All rights reserved.
         </div>
     </footer>
 
