--- a/dedicated destinations/sanchi/sanchi.html
+++ b/dedicated destinations/sanchi/sanchi.html
@@ -153,7 +153,7 @@ The name Sanchi might have originated from Sanskrit and Pali word sanch meaning 
         <h4>Address</h4>
         <div class=" mapouter ">
           <div class=" gmap_canvas "><iframe width=" 200 " height=" 200 " id=" gmap_canvas "
-              src=" https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed "
+              src=" https://maps.app.goo.gl/dctmHLaLoABNn3st5 "
               frameborder=" 0 " scrolling=" no " marginheight=" 0 " marginwidth=" 0 "></iframe><a
               href=" https://embedgooglemap.net/124/ ">invincible 123movies</a><br>
             <style>
