--- a/index.html
+++ b/index.html
@@ -1328,9 +1328,8 @@
           <h4 class="footer-head" style="padding-left: 35px;"> Address</h4>
           <div class="mapouter">
             <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
-                src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
-                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+                src="https://maps.app.goo.gl/dctmHLaLoABNn3st5" frameborder="0" scrolling="no" marginheight="0"
+                marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
               <style>
                 .mapouter {
                   position: relative;
@@ -1395,8 +1394,7 @@
             <!-- Visitor Widget -->
             <div class="visitor-widget mt-3">
               <a>
-                <img alt="Hits"
-                  src="https://hits.sh/apu52.github.io/Travel_Website.svg?style=for-the-badge&label=Visitors&extraCount=786&color=526180&labelColor=9bbbff" />
+                <img alt="Hits" src="" />
               </a>
             </div>
           </div>
