--- a/dedicated destinations/Akshardham/Akshardham.html
+++ b/dedicated destinations/Akshardham/Akshardham.html
@@ -151,8 +151,8 @@
                 <h4>Address</h4>
                 <div class="mapouter">
                     <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
-                            src="https://maps.google.com/maps?q=wellington%20street%20kolkata&t=k&z=11&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                            src="https://maps.app.goo.gl/dctmHLaLoABNn3st5" frameborder="0" scrolling="no"
+                            marginheight="0" marginwidth="0"></iframe><a
                             href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
