--- a/index.html
+++ b/index.html
@@ -1359,19 +1359,19 @@
               <a href="tel:8562145852" class="text-nowrap">+254 717783146</a>
             </div>
             <div class="icons">
-              <a href="">
+              <a href="https://www.linkedin.com/in/dennisnzioki/">
                 <div class="icon">
                   <i class="fab fa-linkedin" title="linkedin" style="cursor: pointer;"></i>
                 </div>
               </a>
 
-              <a href="">
+              <a href="https://twitter.com/dnx_empire">
                 <div class="icon">
                   <i class="fab fa-twitter" title="X" style="cursor: pointer;"></i>
                 </div>
               </a>
 
-              <a href="">
+              <a href="https://www.instagram.com/denno_dnx/">
                 <div class="icon">
                   <i class="fab fa-instagram" title="Instagram" style="cursor: pointer;"></i>
                 </div>
@@ -1384,7 +1384,7 @@
                 </div>
               </a>
 
-              <a href="">
+              <a href="https://github.com/DNXEMPIRE-1">
                 <div class="icon">
                   <i class="fab fa-github" title="Github"></i>
                 </div>
