--- a/dedicated-destinations/bali/start.html
+++ b/dedicated-destinations/bali/start.html
@@ -240,9 +240,9 @@
       <div class="footer__col">
         <h4>Address</h4>
         <div class="mapouter">
-          <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
-              src="https://maps.app.goo.gl/dctmHLaLoABNn3st5" frameborder="0" scrolling="no" marginheight="0"
-              marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+          <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="" frameborder="0"
+              scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+              href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
             <style>
               .mapouter {
                 position: relative;
