--- a/dedicated-destinations/Paris/start.html
+++ b/dedicated-destinations/Paris/start.html
@@ -225,9 +225,8 @@
             <div class="footer__col">
                 <h4>Address</h4>
                 <div class="mapouter">
-                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
-                            src="https://maps.app.goo.gl/dctmHLaLoABNn3st5" frameborder="0" scrolling="no"
-                            marginheight="0" marginwidth="0"></iframe><a
+                    <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="" frameborder="0"
+                            scrolling="no" marginheight="0" marginwidth="0"></iframe><a
                             href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
                         <style>
                             .mapouter {
