--- a/index.html
+++ b/index.html
@@ -1327,9 +1327,9 @@
         <div class="footer__col">
           <h4 class="footer-head" style="padding-left: 35px;"> Address</h4>
           <div class="mapouter">
-            <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas"
-                src="https://maps.app.goo.gl/dctmHLaLoABNn3st5" frameborder="0" scrolling="no" marginheight="0"
-                marginwidth="0"></iframe><a href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
+            <div class="gmap_canvas"><iframe width="200" height="200" id="gmap_canvas" src="" frameborder="0"
+                scrolling="no" marginheight="0" marginwidth="0"></iframe><a
+                href="https://embedgooglemap.net/124/">invincible 123movies</a><br>
               <style>
                 .mapouter {
                   position: relative;
@@ -1392,11 +1392,7 @@
 
             </div>
             <!-- Visitor Widget -->
-            <div class="visitor-widget mt-3">
-              <a>
-                <img alt="Hits" src="" />
-              </a>
-            </div>
+
           </div>
 
         </div>
